# bayesmix

./: .gitignore  CMakeLists.txt  pre-commit-config.yaml
cmake/: ProtobufUtils.cmake
examples/: CMakeLists.txt
examples/gamma_hierarchy/: gamma_likelihood.h  gamma_prior_model.h  gamma_utils.h  gammagamma_hierarchy.h  gammagamma_updater.h  run_gamma_gamma.cc
examples/gamma_hierarchy/proto/: gamma_gamma_prior.proto  gamma_state.proto
src/algorithms/: base_algorithm.cc  base_algorithm.h
src/hierarchies/: abstract_hierarchy.h  base_hierarchy.h
src/hierarchies/likelihoods/: abstract_likelihood.h  base_likelihood.h
src/hierarchies/updaters/: abstract_updater.h
src/mixings/: dirichlet_mixing.cc
src/proto/: algorithm_id.proto  algorithm_state.proto  hierarchy_id.proto  mixing_id.proto  semihdp.proto
test/: hierarchies.cc  likelihoods.cc  write_proto.cc
